[gd_scene load_steps=10 format=3 uid="uid://cnnfw8ly7hsfv"]

[ext_resource type="Script" path="res://scripts/enemies/gunner_rocket.gd" id="1_oj5qd"]
[ext_resource type="Script" path="res://scripts/physics_lerp.gd" id="2_fr1g2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ngnas"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_3v3hu"]
material = SubResource("StandardMaterial3D_ngnas")
flip_faces = true
radial_segments = 10
rings = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n47a8"]
shading_mode = 0
albedo_color = Color(1, 0.631373, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ot6ty"]
material = SubResource("StandardMaterial3D_n47a8")
radial_segments = 10
rings = 5

[sub_resource type="SphereShape3D" id="SphereShape3D_p4au6"]
radius = 0.238993

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x8gdi"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0.478431, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_qm5gc"]
material = SubResource("StandardMaterial3D_x8gdi")
radius = 0.375
height = 0.75
radial_segments = 12
rings = 6

[node name="gunner_rocket" type="Area3D"]
top_level = true
collision_mask = 257
script = ExtResource("1_oj5qd")

[node name="sprite" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
top_level = true
visible = false
cast_shadow = 0
mesh = SubResource("SphereMesh_3v3hu")
script = ExtResource("2_fr1g2")

[node name="sprite_interior" type="MeshInstance3D" parent="sprite"]
transform = Transform3D(0.635, 0, 0, 0, 0.635, 0, 0, 0, 0.635, 0, 0, 0)
cast_shadow = 0
mesh = SubResource("SphereMesh_ot6ty")
skeleton = NodePath("../..")

[node name="hitbox" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_p4au6")

[node name="explosion" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_qm5gc")

[node name="death_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
